test_suite/tests/ui/nightly/fail/help_attribute/duplicated_command_usage.stderr
error: custom attribute panicked
 --> $DIR/duplicated_command_usage.rs:4:1
  |
4 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: multiple `#[command_usage]` defined
